# SudokuSolver

./: .gitignore  .travis.yml  BacktrackingSolver.cpp  BacktrackingSolver.h  CMakeLists.txt  ConstrainSolver.cpp  ConstrainSolver.h  Matrix.cpp  Matrix.h  MatrixPoint.h  README.md  Solver.cpp  Solver.h  StaticVector.h  SudokuGrid.cpp  SudokuGrid.h  Tag.h  Validator.cpp  Validator.h  constexpr_functions.h  easy_input.txt  inverse_evaluator.h  main.cpp  medium_input.txt
data/: evil_input.txt  hard_input.txt
fwd/: Matrix.h  MatrixPoint.h  SudokuGrid.h
pkg/: conanfile.py
pkg/test_package/: conanfile.py
test/: CMakeLists.txt  test_SudokuSolver.cpp  test_main.cpp
